fix: setting modal popup having z-index issuey

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -3620,7 +3620,7 @@ span.customize-control-title.ast-group-section-title {
   border-radius: 3px;
   right: 0;
   left: 0;
-  z-index: 10000;
+  z-index: 8;
   background-color: #fff;
 }
 
