--- a/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
@@ -31,7 +31,7 @@
   border-radius: 3px;
   right: 0;
   left: 0;
-  z-index: 10000;
+  z-index: 8;
   background-color: #fff;
 }
 
